--- a/resources/assets/sass/layout/_header.scss
+++ b/resources/assets/sass/layout/_header.scss
@@ -2,41 +2,36 @@
 
     .board-name {
         float: $left;
-        margin: side-values(10px 2% 5px 0);
+        margin: side-values(20px 2% 15px 0);
 
-        @include bp-medium {
-            margin: side-values(20px 2% 15px 0);
+        svg {
+    		height: 40px;
+    		width: 50px;
+            display: inline-block;
+            vertical-align: middle;
+            margin-top: -5px;
+    		* {
+    			fill: $alt-font-color-2;
+    		}
+    	}
+
+        &:hover,
+        &:active {
+
+            svg * {
+                    fill: $secondary-color;
+            }
+        }
+
+        &__name {
+            font-size: 1.2em;
+            font-weight: 500;
+            color: $font-color;
         }
 
         #logo {
-            background-image: url("../images/logo_mobile.png");
-            background-repeat: no-repeat;
-            background-position: top $left;
-            width: 137px;
-            height: 40px;
+            text-decoration: none;
             display: block;
-
-            @include bp-medium {
-                background-image: url("../images/logo2.png");
-                width: 188px;
-                height: 55px;
-            }
         }
-    }
-}
-
-@media all and (-webkit-min-device-pixel-ratio: 2) {
-
-    .header .board-name #logo {
-        background-image: url("../images/logo_mobile@2x.png");
-        background-size: 137px 40px;
-    }
-}
-
-@media all and (-webkit-min-device-pixel-ratio: 2) and (min-width: $bp-medium) {
-
-    .header .board-name #logo {
-        background-image: url("../images/logo2@2x.png");
-        background-size: 188px 55px;
     }
 }
