--- a/resources/assets/sass/base/_typography.scss
+++ b/resources/assets/sass/base/_typography.scss
@@ -1,2 +1,2 @@
 // Font Stack
-$font-stack: Open Sans, Helvetica Neue, Helvetica, Arial; // note: Open Sans is imported in headerinclude.twig template
+$font-stack: Roboto, Helvetica Neue, Helvetica, Arial; // note: Open Sans is imported in headerinclude.twig template
