--- a/resources/views/partials/headerinclude.twig
+++ b/resources/views/partials/headerinclude.twig
@@ -3,7 +3,8 @@
         <meta name="description" content="{{ setting('general.board_desc') }}">
         <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
         <meta name="csrf-token" content="{{ csrf_token() }}" />
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,600,700">
+        <!--<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,600,700">-->
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
         {% if trans('general.direction') == 'rtl' %}
             <link rel="stylesheet" href="{{ asset('assets/css/main.rtl.css') }}">
         {% else %}
